# agent-fox-v3

./: .gitignore  AGENTS.md  Makefile  README.md  af  prd.md  pyproject.toml
.agent-fox/: config.toml  memory.jsonl  state.jsonl
.claude/: settings.local.json
.cursor/skills/: af-release
.specs/: prd.md  v2.md
.specs/01_core_foundation/: design.md  requirements.md  tasks.md
.specs/02_planning_engine/: tasks.md
.specs/03_session_and_workspace/: design.md  requirements.md  tasks.md
.specs/04_orchestrator/: requirements.md  tasks.md
.specs/05_structured_memory/: requirements.md  tasks.md
.specs/06_hooks_sync_security/: tasks.md
.specs/07_operational_commands/: tasks.md
.specs/08_error_autofix/: requirements.md  tasks.md
.specs/09_spec_validation/: requirements.md  tasks.md
.specs/10_platform_integration/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/11_duckdb_knowledge_store/: design.md  tasks.md
.specs/12_fox_ball/: tasks.md
.specs/13_time_vision/: requirements.md  tasks.md
.specs/14_cli_banner/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/15_session_prompt/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/15_standup_formatting/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
agent_fox/: __init__.py  __main__.py  _build_info.py
docs/: README.md  archetypes.md  cli-reference.md  config-reference.md  configuration.md  errata.md  get_well.md  integration-gap-analysis.md  memory.md  skills.md
scripts/: README.md  dump_knowledge.py
tests/: conftest.py
(+953 files in other folders)
