[project]
name = "agent-fox"
version = "2.4.0"
description = "Autonomous coding-agent orchestrator"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "anthropic[vertex,bedrock]>=0.40",
    "claude-code-sdk>=0.0.1",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "sentence-transformers>=3.0",
    "xxhash>=3.0",
    "scikit-learn>=1.4",
    "tomlkit>=0.12",
]

[project.scripts]
agent-fox = "agent_fox.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]
